--- a/html5-css3-master/02/index-text.html
+++ b/html5-css3-master/02/index-text.html
@@ -25,21 +25,37 @@
             <!-- 자기 소개 -->
             <section>
                 <h2 class="subtitle">Who am I?</h2>
-
+                <p>웹 기술에 대해 공부 중 입니다.
+                    <br>눈에 보이니 재밌네요
+                </p>
             </section>
 
             <!-- 경력 -->
             <section>
                 <h2 class="subtitle">Experience</h2>
+                <ul>
+                    <li><mark>학교</mark></li>
+                    <ol type="A">
+                        <li>장당초등학교</li>
+                        <li>효명중학교</li>
+                        <li>은혜고등학교</li>
+                        <li>순천향대학교</li>
+                    </ol>
+
+                    <li><b>공부한 언어 및 마크업 언어</b></li>
+                    <ol>
+                        <li>C</li>
+                        <li>java</li>
+                        <li>HTML</li>
+                    </ol>
+                </ul>
            
             </section>
-
             <!-- 숙련도 -->
             <section>
                 <h2 class="subtitle">Skills</h2>
 
             </section>
-
             <!-- 학력 -->
             <section>
                 <h2 class="subtitle">Education</h2>
