--- a/html5-css3-master/03/index-img.html
+++ b/html5-css3-master/03/index-img.html
@@ -26,6 +26,9 @@
         <!-- 사이드바 -->
         <aside>
             <div id="namecard">
+                <img src="images/pf.jpg" alt="">
+                <h1>GyeongTak Kim</h1>
+                <p>오늘은 남은 인생이 시작되는 첫째날</p>
 
             </div>
             <div id="detail">
