--- a/html5-css3-master/03/map.html
+++ b/html5-css3-master/03/map.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<img src="images/kids.jpg"  alt="" usemap="#favorites">
+<img src="images/kids.jpg"  alt="" usemap="#favorites"> <!-- usemap 속성으로 #favorites 맵 연결 -->
 <map name="favorites">
   <area shape="rect" coords="10,10,160,200" href="http://cafe.naver.com/doithtml5" target="_blank" alt="do it html5 네이버 카페로 가기">
   <area shape="rect" coords="220,10,380,200" href="http://www.facebook.com/do.it.html5" target="_blank" alt="do it html5 페이스북 페이지로 가기">
