--- a/html5-css3-master/04/quiz-1.html
+++ b/html5-css3-master/04/quiz-1.html
@@ -18,6 +18,23 @@
 </head>
 <body>
 	<h1>예약 정보</h1>
+	<form>
+		<ul>
+			<li>
+				<label for="r-name">이름</label>
+				<input type="text" id="r-name" autofocus required placeholder="홍길동">
+			</li>
+			<li>
+				<label for="r-phone">휴대폰</label>
+				<input type="tel" id="r-phone" required placeholder="010-1234-5678">
+			</li>
+			<li>
+				<label for="r-email">이메일</label>
+				<input type="email" id="r-email" required placeholder="kkt@email">
+			</li>
+			<input type="submit" value="예약하기">
+		</ul>
+	</form>
 
 </body>
 </html>
