--- a/html5-css3-master/04/quiz-2.html
+++ b/html5-css3-master/04/quiz-2.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="ko">
   <head>
     <meta charset="utf-8">
@@ -22,7 +22,37 @@
 			<p>HTML, CSS, Javascript에 대한 기술적 이해와 경험이 있는 분을 찾습니다.</p>
 			<hr>
 			<form>
-				
+				<h3>개인정보</h3>
+				<ul>
+					<li>
+						<label for="name">이름</label>
+						<input type="text" id="name" placeholder="공백없이 입력하세요">
+					</li>
+					<li>
+						<label for="tel">연락처</label>
+						<input type="tel" id="tel">
+					</li>
+				</ul>
+
+				<h3>지원 분야</h3>
+				<ul>
+					<li>
+						<label><input type="radio" name="field">웹퍼블리싱</label>
+					</li>
+					<li>
+						<label><input type="radio" name="field">웹 애플리케이션 개발</label>
+					</li>
+					<li>
+						<label><input type="radio" name="field">개발 환경 개선</label>
+					</li>
+				</ul>
+
+				<h3>지원 동기</h3>
+				<textarea cols="60" rows="5" placeholder="본사 지원 동기를 간략히 써 주세요"></textarea>4
+				<br>
+				<input type="submit" value="접수하기">
+				<button type="reset">다시 쓰기</button>
+
 			</form>
 		</div>
   </body>
